<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".activity.AddItemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/toolbarLayout"
        android:layout_height="70dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:id="@+id/backArrow"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_centerVertical="true"
                android:layout_height="30dp"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            style="@style/ToolbarTitle"
            android:layout_height="wrap_content"
            android:text="@string/addItems"/>




    </RelativeLayout>

    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/toolbarLayout"
        android:layout_marginTop="10dp"
        android:background="@drawable/share_item_border"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/items"
        android:layout_below="@+id/spinner_gender"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
       android:theme="@style/itemName"
        android:textColor="@color/black"
        android:text="@string/items"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="@color/loginheadfontcolor"
        android:hint="@string/search_item"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        android:theme="@style/addItemSearch"
        android:drawableEnd="@drawable/baseline_search_24"
        android:id="@+id/searchItem"
        android:drawableTint="@color/loginheadfontcolor"
        android:background="@drawable/share_item_border"
        android:layout_below="@+id/items"/>

    <RelativeLayout
        android:layout_below="@+id/searchItem"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclarviewItem"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No Item Found"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:id="@+id/noItemFound"/>


    </RelativeLayout>



</RelativeLayout>