<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.ItemDescriptionActivity">

    <RelativeLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backArrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/baseline_arrow_back_24" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:id="@+id/toolbarText"
            android:layout_marginStart="5dp"
            android:text="@string/Itemdes" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/image_shape">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/mainImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

        <LinearLayout
            android:id="@+id/imageLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/additems" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Upload Item"
                android:theme="@style/ItemDescription" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Image"
                android:textAlignment="center"
                android:theme="@style/ItemDescription" />
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/itemNameDescription"
            style="@style/ItemDescriptionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="45dp"
            android:text="HikVision E100" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="Price"
            android:theme="@style/ItemDescriptionPriceTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="end"

            android:gravity="start"
            android:text="Quantity"
            android:theme="@style/ItemDescriptionPriceTextView" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/itemDesciprionPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="45dp"
            android:text="$20"
            android:theme="@style/ItemDescriptionName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/btnNegative"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/image_shape">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"

                    android:layout_centerInParent="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/minus"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                android:background="@drawable/image_shape">

                <TextView
                    android:id="@+id/itemCount"
                    android:layout_width="70dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:paddingTop="3dp"
                    android:src="@drawable/ic_baseline_add_24"
                    android:text="2"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btnPositive"
                android:layout_width="35dp"
                android:layout_height="35dp"

                android:background="@drawable/image_shape">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_baseline_add_24"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/description"
            android:textAlignment="center"
            android:theme="@style/ItemDescriptionPriceTextView"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit,
sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.

Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
aliquip ex ea commodo consequat."
                android:textAlignment="textStart"
                android:theme="@style/ItemDescriptionDesTextView"
                tools:ignore="SmallSp" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="Store Location"
            android:textAlignment="center"
            android:theme="@style/ItemDescriptionPriceTextView"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/itemLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/full_address"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="SmallSp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="5dp"
            android:id="@+id/pinLocation"
            android:background="@drawable/pin_shape"
            android:layout_height="30dp"
            android:layout_marginTop="5dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/ItemDescriptionPinLocation"
                android:text="Pin Location"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_location_on_24"
                app:tint="@color/white" />



        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Add to List"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            style="@style/LoginButtonFontStyle"
            android:id="@+id/btnAddItem"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_shape"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone"
            android:text="Edit Item"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            style="@style/LoginButtonFontStyle"
            android:id="@+id/btnEditItem"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_shape"
            />
    </RelativeLayout>



</LinearLayout>